# jesus

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md
docs/: bible_engine.md
src/bible/data/en/: 1_chronicles.hpp  1_corinthians.hpp  1_john.hpp  1_kings.hpp  1_peter.hpp  1_samuel.hpp  1_thessalonians.hpp  1_timothy.hpp  2_chronicles.hpp  2_corinthians.hpp  2_john.hpp  2_kings.hpp  2_peter.hpp  2_samuel.hpp  2_thessalonians.hpp  2_timothy.hpp  3_john.hpp  README.md  __books__.hpp  acts.hpp  amos.hpp  colossians.hpp  daniel.hpp  deuteronomy.hpp  ecclesiastes.hpp  ephesians.hpp  esther.hpp  exodus.hpp  ezekiel.hpp  ezra.hpp  galatians.hpp  genesis.hpp  habakkuk.hpp  haggai.hpp  hebrews.hpp  hosea.hpp  isaiah.hpp  james.hpp  jeremiah.hpp  job.hpp  (+28 more)
src/bible/data/es/: 1_corintios.hpp  1_cronicas.hpp  1_juan.hpp  1_pedro.hpp  1_reyes.hpp  1_samuel.hpp  1_tesalonicenses.hpp  1_timoteo.hpp  2_corintios.hpp  2_cronicas.hpp  2_juan.hpp  2_pedro.hpp  2_reyes.hpp  2_samuel.hpp  2_tesalonicenses.hpp  2_timoteo.hpp  3_juan.hpp  README.md  __books__.hpp  abdias.hpp  amos.hpp  apocalipsis.hpp  cantares.hpp  colosenses.hpp  daniel.hpp  deuteronomio.hpp  eclesiastes.hpp  efesios.hpp  esdras.hpp  ester.hpp  exodo.hpp  ezequiel.hpp  filemon.hpp  filipenses.hpp  galatas.hpp  genesis.hpp  habacuc.hpp  hageo.hpp  hebreos.hpp  hechos.hpp  (+28 more)
src/bible/include/bible/: book.hpp
src/bible/tools/: bible_compressor.cpp
src/jesus/: main.cpp  test_runner.cpp
src/jesus/ast/: ast_node.hpp  binary_operation_node.hpp  conditional_expression_node.hpp  expression_node.hpp  identifier_node.hpp  let_there_be_node.hpp  reveal_node.hpp  value_node.hpp
src/jesus/ast/expr/: ask_expr.cpp  ask_expr.hpp  assignable_expr.hpp  bible_expr.cpp  bible_expr.hpp  binary_expr.cpp  binary_expr.hpp  conditional_expr.cpp  conditional_expr.hpp  convert_to_expr.hpp  create_instance_expr.cpp  create_instance_expr.hpp  dict_expr.cpp  dict_expr.hpp  expr.hpp  formatted_string_expr.cpp  formatted_string_expr.hpp  get_attr_expr.cpp  get_attr_expr.hpp  grouping_expr.cpp  grouping_expr.hpp  index_expr.cpp  index_expr.hpp  list_expr.cpp  list_expr.hpp  literal_expr.cpp  literal_expr.hpp  method_call_expr.cpp  method_call_expr.hpp  parity_check_expr.cpp  parity_check_expr.hpp  polimorfism_expr.hpp  unary_expr.cpp  unary_expr.hpp  variable_expr.cpp  variable_expr.hpp
src/jesus/ast/stmt/: assign_stmt.cpp  assign_stmt.hpp  ast_inspect_stmt.cpp  ast_inspect_stmt.hpp  break_stmt.cpp  break_stmt.hpp  continue_stmt.cpp  continue_stmt.hpp  create_class_stmt.cpp  create_class_stmt.hpp  create_method_stmt.hpp  create_var_stmt.cpp  create_var_stmt.hpp  create_var_type_stmt.cpp  create_var_type_stmt.hpp  create_var_with_ask_stmt.cpp  create_var_with_ask_stmt.hpp  for_each_stmt.cpp  for_each_stmt.hpp  if_stmt.cpp  if_stmt.hpp  import_module_stmt.cpp  import_module_stmt.hpp  incomplete_block_stmt.hpp  inspect_stmt.cpp  inspect_stmt.hpp  memory_inspect_stmt.cpp  memory_inspect_stmt.hpp  on_stmt.cpp  on_stmt.hpp  output_statement.hpp  (+25 more)
src/jesus/cli/: bible.cpp  bible.hpp  cli_parser.cpp  cli_parser.hpp  disciple.cpp  disciple.hpp  faith.cpp  faith.hpp  help.cpp  help.hpp  uml_exporter.cpp  uml_exporter.hpp
src/jesus/interpreter/: expr_visitor.hpp  interpreter.cpp  interpreter.hpp  stmt_visitor.hpp  value.hpp
src/jesus/lexer/: keywords.hpp  lexer.cpp  lexer.hpp  token.hpp  token_type.hpp
src/jesus/parser/: expression_parser.cpp  expression_parser.hpp  parser.cpp  parser.hpp  parser_context.cpp  parser_context.hpp
src/jesus/semantic/: semantic_analyser.hpp
src/jesus/spirit/: heart.cpp  heart.hpp  mind.hpp  return_signal.hpp  spirit_of_counsel.hpp  spirit_of_fear_of_the_lord.hpp  spirit_of_knowledge.hpp  spirit_of_might.hpp  spirit_of_the_lord.hpp  spirit_of_understanding.cpp  spirit_of_understanding.hpp  spirit_of_wisdom.hpp  symbol_table.hpp  value.cpp  value.hpp
src/jesus/tests/: 040-many-tests.jesus  040-many-tests.jesus.expected
src/jesus/types/: creation_type.cpp  creation_type.hpp  known_types.cpp  known_types.hpp  polymorphic_type.hpp  type_registry.hpp
src/jesus/utils/: banner.hpp  file_utils.hpp  string_utils.cpp  string_utils.hpp  version.hpp  version.hpp.in
src/jesus/vm/: chunk.hpp  compiler.cpp  compiler.hpp  instruction.hpp  opcode.cpp  opcode.hpp  vm.cpp  vm.hpp
(+266 files in other folders)
